// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ImageDetailsPage w/ Anna Kendrick Photo 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <main
      className={undefined}
    >
      <a
        className={undefined}
        href="https://static.parade.com/wp-content/uploads/2017/10/AnnaKendrick-FTR.jpg"
        target="_blank"
      >
        <img
          alt="Anna Kendrick"
          src="https://static.parade.com/wp-content/uploads/2017/10/AnnaKendrick-FTR.jpg"
        />
      </a>
    </main>
    <div
      className={undefined}
    >
      <aside
        className={undefined}
      >
        <h6>
          Metadata
        </h6>
        <div
          className={undefined}
        >
          <table>
            <tbody>
              <tr>
                <td>
                  Width
                </td>
                <td>
                  1240
                </td>
              </tr>
              <tr>
                <td>
                  Height
                </td>
                <td>
                  775
                </td>
              </tr>
              <tr>
                <td>
                  Format
                </td>
                <td>
                  JPEG
                </td>
              </tr>
              <tr>
                <td>
                  Color Space
                </td>
                <td>
                  SRGB
                </td>
              </tr>
              <tr>
                <td>
                  Has Alpha Channel
                </td>
                <td>
                  No
                </td>
              </tr>
              <tr>
                <td>
                  Is Transparent
                </td>
                <td>
                  No
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </aside>
      <aside
        className={undefined}
      >
        <h6>
          Tags
        </h6>
        <ul>
          <li>
            anna kendrick
          </li>
        </ul>
      </aside>
    </div>
  </div>
</div>
`;

exports[`Storyshots ImageDetailsPage w/ Google Logo 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <main
      className={undefined}
    >
      <a
        className={undefined}
        href="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
        target="_blank"
      >
        <img
          alt="z5vn9gr3wja"
          src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
        />
      </a>
      <a
        className={undefined}
        href="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
        target="_blank"
      >
        <img
          alt="z5vn9gr3wja"
          src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
        />
      </a>
    </main>
    <div
      className={undefined}
    >
      <aside
        className={undefined}
      >
        <h6>
          Metadata
        </h6>
        <div
          className={undefined}
        >
          <table>
            <tbody>
              <tr>
                <td>
                  Width
                </td>
                <td>
                  544
                </td>
              </tr>
              <tr>
                <td>
                  Height
                </td>
                <td>
                  184
                </td>
              </tr>
              <tr>
                <td>
                  Format
                </td>
                <td>
                  PNG
                </td>
              </tr>
              <tr>
                <td>
                  Color Space
                </td>
                <td>
                  SRGB
                </td>
              </tr>
              <tr>
                <td>
                  Has Alpha Channel
                </td>
                <td>
                  Yes
                </td>
              </tr>
              <tr>
                <td>
                  Is Transparent
                </td>
                <td>
                  Yes
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </aside>
      <aside
        className={undefined}
      >
        <h6>
          Tags
        </h6>
        <ul>
          <li>
            google
          </li>
          <li>
            logo
          </li>
        </ul>
      </aside>
    </div>
  </div>
</div>
`;

exports[`Storyshots UI Typography 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <h1>
    Header h1
  </h1>
  <h2>
    Header h2
  </h2>
  <h3>
    Header h3
  </h3>
  <h4>
    Header h4
  </h4>
  <h5>
    Header h5
  </h5>
  <h6>
    Header h6
  </h6>
  <hr />
  <p>
    Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. 
  </p>
  <hr />
  <p>
    Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. Some paragraph. 
  </p>
  <ul>
    <li>
      An item in an unordered list.
    </li>
    <li>
      An item in an unordered list.
    </li>
    <li>
      An item in an unordered list.
    </li>
    <li>
      An item in an unordered list.
    </li>
  </ul>
  <ol>
    <li>
      An item in an ordered list.
    </li>
    <li>
      An item in an ordered list.
    </li>
    <li>
      An item in an ordered list.
    </li>
    <li>
      An item in an ordered list.
    </li>
  </ol>
</div>
`;
